--- a/src/scss/framework/base/_variables.scss
+++ b/src/scss/framework/base/_variables.scss
@@ -1,25 +1,31 @@
 // Typography
-$base-font-family: $helvetica;
+
+$apercu: "Apercu", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
+$base-font-family: $apercu;
 $heading-font-family: $base-font-family;
 
 // Font Sizes
 $base-font-size: 1em;
 
 // Line height
-$base-line-height: 1.5;
-$heading-line-height: 1.2;
+$base-line-height: 1.3;
+$heading-line-height: 1;
 
 // Other Sizes
-$base-border-radius: 3px;
+$base-border-radius: 0px;
 $base-spacing: $base-line-height * 1em;
 $small-spacing: $base-spacing / 2;
 $base-z-index: 0;
 
 // Colors
-$blue: #477dca;
-$dark-gray: #333;
+$blue: #0696E3;
+$pink: #E30641;
+$green: #75CEB2;
+$yellow: #F6CF32;
+
+$dark-gray: #111;
 $medium-gray: #999;
-$light-gray: #ddd;
+$light-gray: #F0F7F9;
 
 // Font Colors
 $base-background-color: #fff;
