--- a/src/scss/components/base-card.scss
+++ b/src/scss/components/base-card.scss
@@ -4,8 +4,10 @@ $card-margin: 4vw;
 .base-card {
 	background-color: $light-gray;
 	margin: $card-margin;
-	padding: $card-margin;
 	//height: calc(100% - $card-margin*2);
 	position: relative;
 	overflow: hidden;
+	> header {
+		padding: $card-margin;
+	}
 }
