--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,6 +15,8 @@
 @import "components/round-button";
 @import "components/menu-link";
 @import "components/cover-image";
+@import "components/gramble-container";
+@import "components/gramble-item";
 
 
 // Modules
