--- a/src/scss/framework/base/_variables.scss
+++ b/src/scss/framework/base/_variables.scss
@@ -22,6 +22,7 @@ $blue: #0696E3;
 $pink: #E30641;
 $green: #75CEB2;
 $yellow: #F6CF32;
+$white: #FFFFFF;
 
 $dark-gray: #111;
 $medium-gray: #343434;
