--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,8 +15,10 @@
 @import "components/round-button";
 @import "components/menu-link";
 @import "components/cover-image";
+@import "components/home-hero";
 @import "components/gramble-container";
 @import "components/gramble-item";
+@import "components/readmore-link";
 
 
 // Modules
