--- a/src/scss/components/base-typography.scss
+++ b/src/scss/components/base-typography.scss
@@ -6,6 +6,10 @@ $font-regular: "Apercu";
 body {
 	//font-family: $font-regular; 
 	font-size: $base-font-size*1.5;
+	line-height: $base-font-size*1.1;
+	@include media($mobile) {
+		font-size: $base-font-size*1.25;
+	}
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -18,7 +22,7 @@ h1,h2,h3,h4,h5,h6 {
 	font-size: $base-font-size*2;	
 	font-weight: 500;
 	@include media($mobile) {
-		font-size: $base-font-size*1.4;
+		font-size: $base-font-size*1.3;
 	}
 }
 
