--- a/src/scss/components/cover-image.scss
+++ b/src/scss/components/cover-image.scss
@@ -13,8 +13,8 @@
 	*/
 
 	//width: 100%;
+	//margin-left: -$card-margin;
 	position: relative;
-	margin-left: -$card-margin;
 	max-width: 100vw - $card-margin*2;
 } 
 
