adds footer and client strips

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,6 +19,8 @@
 @import "components/gramble-container";
 @import "components/gramble-item";
 @import "components/readmore-link";
+@import "components/client-strip";
+@import "components/footer-strip";
 
 
 // Modules
