starts desktop styles for case studies

--- a/src/scss/components/footer-strip.scss
+++ b/src/scss/components/footer-strip.scss
@@ -30,7 +30,7 @@ $card-padding: 4vw;
 	}	
 	a {
 		color: $white;
-		display: block;
+		display: inline-block;
 	}
 	.phone-number {
 		margin-bottom: $base-font-size;
