--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,6 +16,7 @@
 @import "components/menu-link";
 @import "components/cover-image";
 @import "components/home-hero";
+@import "components/section-header";
 @import "components/gramble-container";
 @import "components/gramble-item";
 @import "components/readmore-link";
