--- a/src/scss/components/footer-strip.scss
+++ b/src/scss/components/footer-strip.scss
@@ -36,3 +36,52 @@ $card-padding: 4vw;
 		margin-bottom: $base-font-size;
 	}
 }
+
+@include media($desktop) {
+	.footer-menu {
+		width: 20%;
+		float: left;
+	}
+	.footer-details {
+		width: 35%;
+		float: left;
+	}
+	.footer-contactbox {
+		width: 45%;
+		float: left;
+	}
+}
+
+@include media($tablet) {
+	.footer-menu {
+		width: 50%;
+		float: left;
+		margin-bottom: $card-margin;
+	}
+	.footer-details {
+		width: 50%;
+		float: left;
+		text-align: right;
+	}
+	.footer-contactbox {
+		width: 100%;
+		float: left;
+	}
+}
+
+@include media($tablet-portrait) {
+	.footer-menu {
+		width: 50%;
+		float: left;
+		margin-bottom: $card-margin;
+	}
+	.footer-details {
+		width: 50%;
+		float: left;
+		text-align: right;
+	}
+	.footer-contactbox {
+		width: 100%;
+		float: left;
+	}
+}
