--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,24 @@
+		<section class="footer-strip">
+			<ul class="footer-menu">
+				<li><a href="#">Home</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Work</a></li>
+				<li><a href="#">Content</a></li>
+				<li><a href="#">Stimulation</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul>
+			<p class="footer-details">
+				© Penrose Studio Ltd <br>
+				B&amp;W Building, 74 Rivington St, London EC2A 3AY <br>
+				Company number: 06947690
+			</p>
+			<div class="footer-contactbox">
+				<h2>Talk to us</h2>
+				<p>We're always interested in hearing about new ideas, and we care about making good things happen. So get in touch to talk about your project.</p>
+				<a href="tel:000" class="phone-number">0788 4421 348</a><br>
+				<a href="mailto:contact@penrosestudio.com" class="contact-link">contact@penrosestudio.com</a>
+			</div>
+		</section>
 		<script type="text/javascript" src="/javascripts/main.js"></script>
 	</body>
 </html>
