--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,9 +12,9 @@
 <!--[if !(IE 6) | !(IE 7) | !(IE 8)  ]><!-->
 <html>
 <!--<![endif]-->
-	<head>
+<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Planchette Pattern Book</title>
+		<title>Penrose Stylebook</title>
 		<link rel="stylesheet" type="text/css" href="/css/style.css" media="screen" />
 		<script type="text/javascript">
 			document.documentElement.className = "js";
