--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -1,7 +1,5 @@
-<html>
-<body>
-  {{> header}}
-  <h1>{{ title }}</h1>
-  {{> footer }}
-</body>
-</html>
+{{> header}}
+  <h1>Hello, I am a content page</h1>
+  <h2>This is a second-level header</h2>
+  <p>Lovely <em>stuff</em> <strong>here</strong></p>
+{{> footer }}
