adds round buttons, menu link animation, sticky header

--- a/src/scss/components/gramble-container.scss
+++ b/src/scss/components/gramble-container.scss
@@ -1,5 +1,11 @@
 
 .gramble-container {
 	@extend .base-card;
+
+	.gramble-morebtn {
+		@extend .round-button;
+		background-color: $white;
+		margin: $card-margin/2 auto;
+	}
 }
 
