--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,6 +22,7 @@
 @import "components/readmore-link";
 @import "components/client-strip";
 @import "components/footer-strip";
+@import "components/sticky-header";
 
 
 // Modules
