adds menu styles

--- a/src/scss/components/menu-link.scss
+++ b/src/scss/components/menu-link.scss
@@ -8,7 +8,7 @@
 
 // vars
 
-$button-width: 35px;
+$button-width: 38px;
 $button-height: 30px;
 $bar-thickness: 2px;
 $button-pad: 2px;
@@ -16,8 +16,8 @@ $button-trans-delay: 0.3s;
 
 // additional vars (JB)
 $bar-color: $dark-gray;
-$button-background-color: $white;
-$button-background-color-active: $white;
+$button-background-color: transparent;
+$button-background-color-active: transparent;
 
 /**
  * Toggle Switch Globals
@@ -45,6 +45,9 @@ $button-background-color-active: $white;
   border: none;
   cursor: pointer;
   transition: background $button-trans-delay;
+  &:hover, &:active, &:focus {
+      background-color: transparent;
+    }
 }
 
 .cmn-toggle-switch:focus {
@@ -70,6 +73,14 @@ $button-background-color-active: $white;
   height: $bar-thickness;
   background-color: $bar-color;
   content: "";
+}
+
+.cmn-toggle-switch.-white span {
+	background: $white;
+	&:after, 
+	&:before {
+		background-color: $white;	
+	}
 }
 
 .cmn-toggle-switch span::before {
