--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -23,7 +23,7 @@
 @import "components/client-strip";
 @import "components/footer-strip";
 @import "components/sticky-header";
-
+@import "components/nav-menu";
 
 // Modules
 @import "modules/section-card";
