--- a/src/scss/components/home-hero.scss
+++ b/src/scss/components/home-hero.scss
@@ -1,5 +1,6 @@
 
 .home-hero {
+	position: relative;
 	
 	.case-study {
 		display: none;
@@ -64,7 +65,7 @@
 
 	.next-button {
 		right: $card-margin*1.5;
-		bottom: $card-margin*1.5;
+		bottom: $card-margin*0.5;
 		img {
 			margin-left: 5%;
 		}
@@ -72,7 +73,7 @@
 
 	.zoom-button {
 		right: calc( #{$card-margin}*2 + #{$round-button-width};
-		bottom: $card-margin*1.5;
+		bottom: $card-margin*0.5;
 	}
 }
 
