--- a/src/scss/components/sticky-header.scss
+++ b/src/scss/components/sticky-header.scss
@@ -3,7 +3,8 @@
 	padding: $card-margin/2 $card-margin;
 	margin-top: -$card-margin/2;
 	margin-bottom: -$card-margin/2;
-	background-color: $white;
+	background-color: rgba($white, 1);
+	@include transition(all 0.5s ease-in-out);
 	.logo {
 		margin-bottom: 0;
 		line-height: 1.4em;
@@ -11,8 +12,9 @@
 	.cmn-toggle-switch {
 		float: left;
 		margin-right: 20px;
-		&:hover, &:active, &:focus {
-			background-color: $white;
-		}
 	}
+}
+
+.sticky-header.cloned {
+	z-index: 100 !important;
 }
