--- a/src/scss/components/site-header.scss
+++ b/src/scss/components/site-header.scss
@@ -11,7 +11,7 @@ $desktop-overlay-width: 40%;
 	}
 
 	.cmn-toggle-switch {
-		margin-bottom: $card-margin/2;
+		margin-bottom: $card-margin;
 		display: block;
 	}
 
