--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,6 +24,7 @@
 @import "components/footer-strip";
 @import "components/sticky-header";
 @import "components/nav-menu";
+@import "components/casestudy-nav";
 
 // Modules
 @import "modules/section-card";
