--- a/src/scss/components/footer-strip.scss
+++ b/src/scss/components/footer-strip.scss
@@ -11,6 +11,10 @@ $card-padding: 4vw;
 	line-height: $base-font-size*1.5;
 	a {
 		color: $dark-gray;
+		padding-bottom: 3px;
+		&:hover {
+			border-bottom: 1px solid $dark-gray;
+		}
 	}
 }
 
@@ -31,6 +35,11 @@ $card-padding: 4vw;
 	a {
 		color: $white;
 		display: inline-block;
+		padding-bottom: 3px;
+		border-bottom: 1px solid transparent;
+		&:hover {
+			border-bottom: 1px solid $white;
+		}
 	}
 	.phone-number {
 		margin-bottom: $base-font-size;
