--- a/src/scss/components/home-hero.scss
+++ b/src/scss/components/home-hero.scss
@@ -29,7 +29,7 @@
 		@include media($desktop) {
 			position: absolute;
 			overflow: visible;
-			bottom: 100px;
+			bottom: 4.5vw;
 			width: calc(100% - 8vw);
 			.cover-image, .readmore-link {
 				display: none;
