--- a/src/scss/components/base-typography.scss
+++ b/src/scss/components/base-typography.scss
@@ -19,7 +19,7 @@ h1,h2,h3,h4,h5,h6 {
 
 // large type class- use to @extend other classes
 .large-header {
-	font-size: $base-font-size*2;	
+	font-size: $base-font-size*1.7;	
 	font-weight: 500;
 	@include media($mobile) {
 		font-size: $base-font-size*1.3;
@@ -41,4 +41,8 @@ h1,h2,h3,h4,h5,h6 {
 
 .clear-both {
 	clear:both;
+}
+
+a {
+	@include transition(all 0.2s ease-in-out);
 }
