--- a/src/scss/components/home-hero.scss
+++ b/src/scss/components/home-hero.scss
@@ -7,6 +7,12 @@
 		@include media($mobile) {
 			display: block;
 		}
+		@include media($tablet) {
+			display: block;
+		}
+		@include media($tablet-portrait) {
+			display: block;
+		}
 		&:first-of-type {
 			display: block;	
 		}
@@ -16,6 +22,12 @@
 		@include media($mobile) {
 			display: none;
 		}
+		@include media($tablet-portrait) {
+			display: none;
+		}
+		@include media($tablet) {
+			display: none;
+		}
 		margin: $card-margin;
 		background: url(../images/jon-post.jpg) no-repeat center center; 
 		-webkit-background-size: cover;
@@ -23,7 +35,7 @@
 		-o-background-size: cover;
 		background-size: cover;
 		height: calc(100% - 8vw);
-		min-height: 600px;
+		min-height: 700px;
 	}
 	.case-study {
 		@include media($desktop) {
@@ -55,7 +67,26 @@
 				width: 45%;
 				left: 55%;
 			}
-		}	
+		}
+		@include media($tablet) {
+			
+			.article-header {
+				overflow: hidden;
+			}
+			.title {
+				width: 50%;
+				float: left;
+				margin-right: 10%;
+				margin-bottom: 0;
+			}
+			.excerpt {
+				position: absolute;
+				bottom: 0;
+				margin-bottom: $card-margin;
+				width: 40%;
+				right: $card-margin;
+			}
+		}
 	}
 	.next-button, .zoom-button {
 		@extend .round-button;
