--- a/src/scss/components/nav-menu.scss
+++ b/src/scss/components/nav-menu.scss
@@ -46,6 +46,7 @@ body {
 	a, a:hover, a:active, a:focus {
 		color: $white;
 		padding-bottom: 5px;
+		border-bottom: 1px solid transparent;
 	}
 	a:hover {
 		border-bottom: 1px solid $white;
