--- a/src/scss/components/sticky-header.scss
+++ b/src/scss/components/sticky-header.scss
@@ -7,11 +7,27 @@
 	@include transition(all 0.5s ease-in-out);
 	.logo {
 		margin-bottom: 0;
-		line-height: 1.4em;
+		line-height: 1.1em;
+		@include media($mobile) {
+			font-size: $base-font-size*0.8;
+			line-height: $base-font-size*1.6;
+		}
+		@include media($tablet-portrait) {
+			font-size: $base-font-size*0.9;
+		}
 	}
 	.cmn-toggle-switch {
 		float: left;
-		margin-right: 20px;
+		margin-right: 1vw;
+		@include media($tablet-portrait) {
+			@include transform(scale(0.75));
+		}
+		@include media($tablet) {
+			@include transform(scale(0.9));
+		}
+		@include media($mobile) {
+			@include transform(scale(0.6));
+		}
 	}
 }
 
