--- a/src/scss/components/gramble-item.scss
+++ b/src/scss/components/gramble-item.scss
@@ -26,6 +26,12 @@ $gramble-padding: 3%;
 		bottom: $base-font-size*2;
 	}
 
+	.logo {
+		width: 30%;
+		position: absolute;
+		top: $gramble-padding;
+	}
+
 	.title {
 		width: 75%;
 		font-size: $base-font-size*1.3;
@@ -41,6 +47,8 @@ $gramble-padding: 3%;
 		position: absolute;
 		top: 0;
 		opacity: 0.5;
+		min-height: 100%;
+		width: auto;
 	}
 
 	.readmore-link {
