--- a/src/scss/components/home-hero.scss
+++ b/src/scss/components/home-hero.scss
@@ -97,14 +97,16 @@
 	.next-button {
 		right: $card-margin*1.5;
 		bottom: $card-margin*0.5;
-		img {
+		img, svg {
 			margin-left: 5%;
 		}
+		g { fill:$blue; }
 	}
 
 	.zoom-button {
 		right: calc( #{$card-margin}*2 + #{$round-button-width};
 		bottom: $card-margin*0.5;
+		g { fill:$blue; }
 	}
 }
 
