--- a/src/scss/components/scrollbar.scss
+++ b/src/scss/components/scrollbar.scss
@@ -1,4 +1,4 @@
-
+/* 
 body::-webkit-scrollbar {
 	width: 10px;
 }
@@ -9,4 +9,4 @@ body::-webkit-scrollbar-track {
 
 body::-webkit-scrollbar-thumb {
 	background-color: tint($dark-gray, 80%);
-}
+} */
