starts creating dynamic templates

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,7 +8,7 @@
 				<li><a href="#">Contact</a></li>
 			</ul>
 			<p class="footer-details">
-				© Penrose Studio Ltd <br>
+				&copy; Penrose Studio Ltd <br>
 				B&amp;W Building, 74 Rivington St, London EC2A 3AY <br>
 				Company number: 06947690
 			</p>
