simplified HTML step in gulpfile: combined templates and pages tasks; what happens now is that all HTML files in the src folder are rendered, and then they are preprocessed, before being copied to the build folder, with the folder structure intact

--- a/src/partials/home-hero.html
+++ b/src/partials/home-hero.html
@@ -20,4 +20,5 @@
 			<p class="intropara">Hello! We provide technology strategy, design and development services to help our clients make the world a nicer place to be.</p>
 		</header>
 	</div>
+	{{> case-study label="Case Study" title="Making personal data into useful data" excerpt="We acted as CTRLio&rsquo;s CTO and product team, providing the support, knowledge and skills they needed to get their company started." img="/images/jon-post.jpg"}}
 </section>
